<resources>
    <string name="app_name">Recruitment helper</string>
    <string name="sign_up_text1">Виберіть найзручніший для себе спосіб реєстрація</string>
    <string name="sign_up_btn_email">Cтворити акаунт через email</string>
    <string name="sign_up_btn_linkedin">створити акаунт через LinkedIn</string>
    <string name="sign_up_text2">Реєстрація за допомогою соціальної мережі LinkedIn дозволить завантажити в додаток інформацію про ваших друзів.</string>
    <string name="name">Ім’я</string>
    <string name="email">Адреса електронної пошти</string>
    <string name="lastname">Прізвище</string>
    <string name="phone">Номер телефону</string>
    <string name="password">Пароль</string>
    <string name="reenter_password">Введіть пароль ще раз</string>
    <string name="my_page">Моя сторінка</string>
    <string name="main_screen">Головний екран</string>
    <string name="add_contact_from_phone_book">Додати з контактів</string>
    <string name="import_contacts_from_linkedin">Імпорт контактів з LinkedIn</string>
    <string name="with_star">Із зірочкою</string>
    <string name="selected_contacts">Обрані контакти</string>
    <string name="settings">Налаштування</string>
    <string name="log_out">Вихід</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="linkedin_profile">LinkedIn профіль</string>
    <string name="edit_contact">Редагування контакту</string>
    <string name="trainee">Trainee</string>
    <string name="junior">Junior</string>
    <string name="middle">Middle</string>
    <string name="senior">Senior</string>
    <string name="experience">Досвід роботи</string>
    <string name="advantages">Переваги</string>
    <string name="disadvantages">Недоліки</string>
    <string name="notes">Замітка</string>
    <string name="job_or_university">Mісце робити чи навчання</string>
    <string name="languages">Іноземні мови</string>
    <string name="skills">Навички</string>

</resources>
