<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text1"
        android:textColor="@color/textIconBackground"
        android:textSize="20sp"
        android:layout_margin="40dp"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="25dp">
        <Button
            android:id="@+id/sign_up_btn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textSize="17sp"
            android:textColor="@color/textIconBackground"
            android:text="@string/sign_up_btn_email"/>
        <Button
            android:id="@+id/sign_up_btn_linked_In"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/textIconBackground"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up_btn_linkedin"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text2"
        android:textColor="@color/textIconBackground"
        android:textSize="20sp"
        android:layout_margin="40dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"/>


</RelativeLayout>
