<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.editcontact.EditContactActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_contact_toolbar"
        style="@style/Toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">


                <ImageButton
                    android:id="@+id/edit_contact_btn_load_photo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icon_photo" />

                <ImageView
                    android:id="@+id/edit_contact_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_circle" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_contact_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_person"
                    android:hint="@string/name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edit_contact_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_phone"
                    android:hint="@string/phone"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/edit_contact_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_mail"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edit_contact_linkedin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_language"
                    android:hint="@string/linkedin_profile"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Дата останнього контакту:"
                    android:textColor="@color/secondaryText"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/secondaryText" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/edit_contact_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="12 лис 2015"
                        android:textColor="@color/primaryText"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/edit_contact_date_btn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/button_edit" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/edit_contact_job_or_university"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_build"
                    android:hint="@string/job_or_university"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Професія:"
                    android:textColor="@color/secondaryText"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/secondaryText" />

                <Spinner
                    android:id="@+id/edit_contact_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/edit_contact_trainee_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:text="@string/trainee"
                            android:textColor="@color/primaryText"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/edit_contact_junior_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:text="@string/junior"
                            android:textColor="@color/primaryText"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/edit_contact_middle_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/middle"
                            android:textColor="@color/primaryText"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/edit_contact_senior_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/senior"
                            android:textColor="@color/primaryText"
                            android:textSize="17sp" />

                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/edit_contact_position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/edit_contact_trainee_r_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1" />

                        <RadioButton
                            android:id="@+id/edit_contact_junior_r_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1" />

                        <RadioButton
                            android:id="@+id/edit_contact_middle_r_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="22dp"
                            android:layout_weight="1" />

                        <RadioButton
                            android:id="@+id/edit_contact_senior_r_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="22dp"
                            android:layout_weight="1" />

                    </RadioGroup>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Зацікавленість в роботі:"
                    android:textColor="@color/secondaryText"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/secondaryText" />

                <Spinner
                    android:id="@+id/edit_contact_job_interest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:id="@+id/edit_contact_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_experience"
                    android:hint="@string/experience"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edit_contact_advantages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/icon_adavntages"
                    android:hint="@string/advantages"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edit_contact_disadvantages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/icon_disadavntages"
                    android:hint="@string/disadvantages"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edit_contact_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/icon_notes"
                    android:hint="@string/notes"
                    android:inputType="text" />

                <LinearLayout
                    android:id="@+id/edit_contact_languages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Іноземні мови:"
                        android:textColor="@color/secondaryText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/edit_contact_language1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/icon_language"
                        android:inputType="text" />

                    <ImageButton
                        android:id="@+id/edit_contact_add_language"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="right"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/button_add" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/edit_contact_skills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Скіли:"
                        android:textColor="@color/secondaryText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/edit_contact_skill1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/icon_skill"
                        android:inputType="text" />

                    <ImageButton
                        android:id="@+id/edit_contact_add_skill"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="right"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/button_add" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>